--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,11 @@ project(Aufgaben C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_Aufgaben main.c
+add_executable(Aufgaben main.c
         1_circle.c
         2_tempertatur.c
         3_resistance.c
+        3_1_sum_product_difference_quotient.c
+        3_2_read_char.c
+        3_3_last_number.c
 )
