fixed prime number (2.6)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,25 @@ add_executable(Aufgaben
         2/12_fibonacci.c
         2/13_number_pyramid.c
         2/14_ggt.c
+        3/1_swap.c
+        3/2_matricies.c
+        3/3_print_matrix.c
+        3/4_dot_product.c
+        3/5_transposed.c
+        3/6_determinant.c
+        3/7_turn_string.c
+        3/8_count_words.c
+        3/9_replace.c
+        3/10_idex_of.c
+        3/11_equals.c
+        3/12_remove_doublets.c
+        3/13_bubble_sort.c
+        3/14_gauss.c
+        4/1-9_person.c
+        4/10-11_linked_list.c
+        4/13_function_pointers.c
+        4/14_binary_tree.c
+        4/12_dynamic_allocation.c
 
 
 )
